--- a/profile.gg/package.json
+++ b/profile.gg/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "bootstrap": "^5.2.2",
+    "html2canvas": "^1.4.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
